Fix JVM version compatibility